--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<a href="web/实验1 3.html" target="_blank">实验1-3</a><br/>
 	<a href="web/实验1 4.html" target="_blank">实验1-4</a><br/>
 	<a href="web/实验1 5.html" target="_blank">实验1-5</a><br/>
-	<a href="web/实验1 .html" target="_blank">实验1-6</a><br/>
+	<a href="web/实验1 6.html" target="_blank">实验1-6</a><br/>
 	<a href="web/实验2 1.html" target="_blank">实验2-1</a><br/>
 	<a href="web/实验2 2.html" target="_blank">实验2-2</a><br/>
 	<a href="web/实验2 3.html" target="_blank">实验2-3</a><br/>
