--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             }
 	</style>
 	</head>
-<body background="images/th.jpg" style="text-align: center">
+<body background="image/th.jpg" style="text-align: center">
     <a href="web/实验1 1.html" target="_blank">实验1-1</a><br/>
     <a href="web/实验1 2.html" target="_blank">实验1-2</a><br/>
 	<a href="web/实验1 3.html" target="_blank">实验1-3</a><br/>
