--- a/web/实验2 3.html
+++ b/web/实验2 3.html
@@ -10,17 +10,17 @@
 	<th colspan="4">我是图片/th>
 </tr>
 <tr>
-	<td><img src="image/IMG_20190914_085532.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20190914_085936.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20190914_090051.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20200618_125427.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20190914_085532.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20190914_085936.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20190914_090051.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20200618_125427.jpg" width="300px" height="300px"></td>
 </tr>
 <tr height="10"></tr>
 <tr>
-	<td><img src="image/IMG_20200618_131338.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20200618_130027.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20200618_130035.jpg" width="300px" height="300px"></td>
-	<td><img src="image/IMG_20200618_131245.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20200618_131338.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20200618_130027.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20200618_130035.jpg" width="300px" height="300px"></td>
+	<td><img src="../image/IMG_20200618_131245.jpg" width="300px" height="300px"></td>
 </tr>
 </table>
 </body>
